# hqmp3

./: README
docs/: report.tex
report/: Makefile  report.lhs
src/: .gitignore  ApplicativeParsec.hs  ChanHandler.hs  ConnHandler.hs  Database.hs  HuffArrays.hs  HuffTables.hs  ID3.hs  Main.hs  PCMWriter.hs  Parser.hs  Player.hs  Playlist.hs  State.hs  Test.hs  Types.hs  Wav.hs  hqmpd.cabal  remakeTrees.hs  tobsanTrees.hs
src/Codecs/Mp3/: Decoder.hs  HuffArrays.hs  HybridFilterBank.hs  ID3.hs  IMDCT.hs  MP3Types.hs  Mp3Trees.hs  SynthesisFilterBank.hs  SynthesisTables.hs  Tables.hs  Test.hs  Types.hs  Unpack.hs  c_imdct.c  c_imdct.h  c_synth.c  c_synth.h
src/Codecs/Wav/: Wav.hs
src/Codecs/mp3_new/: AliasAddition.hs  ID3.hs  Reorder.hs  Requantize.hs  Unpack.hs  UnpackGranule.hs  todo
src/Data/Binary/: BitGet.hs  BitUtil.hs
src/Data/Binary/BitString/: Tests.hs
src/Data/BitString/: BitGet.hs  BitString.hs  Tests.hs
src/Huffman/: CreateHuff.hs  Huffman.hs  Huffman8.hs  Mp3Trees.hs  Tables.hs  huffman.cabal
src/Huffman/Codec/Compression/Huffman/: Huffman.hs  Huffman8.hs
src/Huffman/examples/: Test.hs
src/Network/: ApplicativeParsec.hs  ConnHandler.hs  Parser.hs
src/bitstring/Data/Binary/BitString/: BitGet.hs  BitString.hs
src/codecs/mp3/: ID3.hs
src/huffman/: Mp3Trees.hs  huffman.cabal
src/huffman/Codec/Compression/Huffman/: Huffman.hs  Huffman8.hs
